--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,4 +21,5 @@ jobs:
           script: |
             set -e
             docker stop front
-            docker run  --name front -p 8000:8000 -d nmzgnv/cards_ai -c "uvicorn main:app --host 0.0.0.0 --port 8000"
+            docker rm front
+            docker run  --name front -p 8000:8000 -d nmzgnv/cards_ai_front:main -c "uvicorn main:app --host 0.0.0.0 --port 8000"
